added random start port and done some cleanup

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,4 +26,7 @@ jpa:
                     auto: update
                 #          auto: validate
                 #          auto: none
-            generate_statistics: true
+
+micronaut:
+    server:
+        port: -1
