disabled micronaut migration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ jpa:
             hibernate:
                 show_sql: true
                 hbm2ddl:
-                    auto: update
+                    auto: none
                 #          auto: validate
                 #          auto: none
 
