--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ micronaut {
 
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor "org.projectlombok:lombok:1.18.12"
+    testAnnotationProcessor "org.projectlombok:lombok:1.18.12"
     annotationProcessor("io.micronaut.data:micronaut-data-processor")
     implementation("io.micronaut:micronaut-validation")
     implementation("io.micronaut:micronaut-runtime")
@@ -35,9 +37,16 @@ dependencies {
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("com.oracle.database.jdbc:ojdbc8")
-    testImplementation(platform("org.testcontainers:testcontainers-bom:1.14.3"))
-    testRuntimeOnly("org.testcontainers:oracle-xe")
+    testImplementation("org.testcontainers:testcontainers-bom:1.15.1")
+    testImplementation("org.testcontainers:oracle-xe")
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.1")
     implementation("com.google.guava:guava:30.1-jre")
+    implementation ('org.apache.commons:commons-lang3:3.11')
+    testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.7.0'
+
+
 }
 
 mainClassName = "database.application.Application"
@@ -51,5 +60,6 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
-
-
+test {
+    useJUnitPlatform()
+}
