--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,7 @@
 #Fri Oct 09 18:42:45 CEST 2020
-datasources.default.driverClassName=org.testcontainers.jdbc.ContainerDatabaseDriver
-datasources.default.url=jdbc\:tc\:oracle\:thin\:@/xe
+datasources:
+    default:
+        url: jdbc:oracle:thin:@localhost:1521/xe
+        driverClassName: oracle.jdbc.OracleDriver
+        username: app
+        password: app
